Home, about and company

--- a/views/basic.html
+++ b/views/basic.html
@@ -5,7 +5,18 @@
 <title>About the NorCal Time Trials Series</title>
 </head>
 <body>
-<h1>NorCal Time Trials Series</h1>
+    <h1>NorCal Time Trials Series</h1>
+    <table>
+        <tr>
+            <h1>
+                <th>Home |</th>
+                <th>About |</th>
+                <th>Company</th>
+            </h1>
+           
+          </tr>
+    </table>
+ 
 <p>This is a web page.</p>
 </body>
 </html>
