Added all the eventsin <p>

--- a/views/basic.html
+++ b/views/basic.html
@@ -17,6 +17,17 @@
           </tr>
     </table>
     <h2>Upcoming Events</h2>
+        <p>February 12</p>
+        <p>Board Meeting</p>
+
+        <p>February 25</p>
+        <p>Drivers Zoom Meeting</p>
+
+        <p>March 12</p>
+        <p>First event at Thunderhill!</p>
+
+
+
  
 </body>
 </html>
