--- a/views/basic.html
+++ b/views/basic.html
@@ -18,13 +18,13 @@
     </table>
     <h2>Upcoming Events</h2>
         <p>February 12</p>
-        <p>Board Meeting</p>
+        <p>&nbsp Board Meeting</p>
 
         <p>February 25</p>
-        <p>Drivers Zoom Meeting</p>
+        <p>&nbsp Drivers Zoom Meeting</p>
 
         <p>March 12</p>
-        <p>First event at Thunderhill!</p>
+        <p>&nbsp First event at Thunderhill!</p>
 
 
 
