Fix small mistkes like &nbsp needed semi column + <h1> not allowed into a table

--- a/views/basic.html
+++ b/views/basic.html
@@ -8,23 +8,20 @@
     <h1>NorCal Time Trials Series</h1>
     <table>
         <tr>
-            <h1>
                 <th>Home |</th>
                 <th>About |</th>
-                <th>Company</th>
-            </h1>
-           
+                <th>Company</th>           
           </tr>
     </table>
     <h2>Upcoming Events</h2>
         <p>February 12</p>
-        <p>&nbsp Board Meeting</p>
+        <p>&nbsp;Board Meeting</p>
 
         <p>February 25</p>
-        <p>&nbsp Drivers Zoom Meeting</p>
+        <p>&nbsp;Drivers Zoom Meeting</p>
 
         <p>March 12</p>
-        <p>&nbsp First event at Thunderhill!</p>
+        <p>&nbsp;First event at Thunderhill!</p>
 
 
 
