--- a/views/contact.html
+++ b/views/contact.html
@@ -5,7 +5,7 @@
 <title>Home NorCal Times Series</title>
 </head>
 <body>
-    <h1>NorCal Time Trials Series</h1>
+    <h1>Contact us @NorCal</h1>
     <table>
         <tr>
                 <th>Home |</th>
