--- a/views/basic.html
+++ b/views/basic.html
@@ -7,7 +7,9 @@
 <body>
     <h1>NorCal Time Trials Series</h1>
     <table>
-        <tr>
+        <tr><th><img src="C:\Users\andre\NorCal-Time-Trials-Website\assets\images\LOGO.png" alt="A black, brown, and white dog wearing a kerchief">
+        </th>
+
                 <th>Home |</th>
                 <th>About |</th>
                 <th>Company</th>           
