--- a/views/basic.html
+++ b/views/basic.html
@@ -5,15 +5,22 @@
 <title>About the NorCal Time Trials Series</title>
 </head>
 <body>
-    <h1>NorCal Time Trials Series</h1>
     <table>
-        <tr><th><img src="C:\Users\andre\NorCal-Time-Trials-Website\assets\images\LOGO.png" alt="A black, brown, and white dog wearing a kerchief">
-        </th>
+     
+        <tr>  
+            <td rowspan="2"><img src="C:\Users\andre\NorCal-Time-Trials-Website\assets\images\LOGO.png" alt="Wheel Logo" width="100" height="100"></td>
+            <th><h1>NorCal Time Trials Series</h1></th>
+          
 
-                <th>Home |</th>
-                <th>About |</th>
-                <th>Company</th>           
-          </tr>
+        </tr>
+   
+        <tr>    
+            <td>Home</td>
+            <td>About</td>
+            <td>Company</td>      
+        </tr>
+        
+       
     </table>
     <h2>Upcoming Events</h2>
         <p>February 12</p>
