Home, about and Contact on the same line <td>

--- a/views/basic.html
+++ b/views/basic.html
@@ -8,16 +8,14 @@
     <table>
      
         <tr>  
-            <td rowspan="2"><img src="C:\Users\andre\NorCal-Time-Trials-Website\assets\images\LOGO.png" alt="Wheel Logo" width="100" height="100"></td>
+            <td rowspan="2"><img src="C:\Users\andre\NorCal-Time-Trials-Website\assets\images\LOGO.png" alt="Wheel Logo" width="150" height="150"></td>
             <th><h1>NorCal Time Trials Series</h1></th>
           
-
         </tr>
    
         <tr>    
-            <td>Home</td>
-            <td>About</td>
-            <td>Company</td>      
+            <td>Home | About | Company</td>
+       
         </tr>
         
        
