Add second image + aligning page second part

--- a/views/basic.html
+++ b/views/basic.html
@@ -14,21 +14,43 @@
         </tr>
    
         <tr>    
-            <td>Home | About | Company</td>
+            <td>Home | About | Contact</td>
        
         </tr>
         
        
     </table>
-    <h2>Upcoming Events</h2>
-        <p>February 12</p>
-        <p>&nbsp;Board Meeting</p>
+    <table>
+        <tr>
+            <td rowspan="10"><img src="C:\Users\andre\NorCal-Time-Trials-Website\assets\images\Image 1.png" alt="Audi:
+                United Autosports, CC BY-SA 2.0 <https://creativecommons.org/licenses/by-sa/2.0>, via Wikimedia Commons" width="150" height="150"></td>
+            <td><h2>Upcoming Events</h2></td>
+        </tr>
 
-        <p>February 25</p>
-        <p>&nbsp;Drivers Zoom Meeting</p>
+        <tr>
+            <td>February 12</td>
+            <td>&nbsp;Board Meeting</td>
+        </tr>
+                
+                <tr>
+                    <td>February 25</td>
+                    <td>&nbsp;Drivers Zoom Meeting</td>
+                </tr>
+        
+                
+                <tr>
+                    <td>March 12</td>
+                    <td>&nbsp;First event at Thunderhill!</td>
+                </tr>
 
-        <p>March 12</p>
-        <p>&nbsp;First event at Thunderhill!</p>
+
+        
+
+
+    </table>
+
+
+
 
 
 
