--- a/views/index.html
+++ b/views/index.html
@@ -2,16 +2,23 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>About the NorCal Time Trials Series</title>
+<title>Home NorCal Times Series</title>
 </head>
 <body>
-    <h1>NorCal Time Trials Series</h1>
     <table>
-        <tr>
-                <th>Home |</th>
-                <th>About |</th>
-                <th>Company</th>           
-          </tr>
+     
+        <tr>  
+            <td rowspan="2"><img src="C:\Users\andre\NorCal-Time-Trials-Website\assets\images\LOGO.png" alt="Wheel Logo" width="150" height="150"></td>
+            <th><h1>NorCal Time Trials Series</h1></th>
+          
+        </tr>
+   
+        <tr>    
+            <td>Home | About | Contact</td>
+       
+        </tr>
+        
+       
     </table>
     
 
