--- a/views/basic.html
+++ b/views/basic.html
@@ -5,54 +5,33 @@
 <title>About the NorCal Time Trials Series</title>
 </head>
 <body>
-    <table>
+    <img src="C:\Users\andre\NorCal-Time-Trials-Website\assets\images\LOGO.png" alt="Wheel Logo" width="150" height="150">
+    <h1>NorCal Time Trial Series</h1>
+
+        <nav>
+            <a href="#">Home</a> |
+            <a href="">About</a> |
+            <a href="">Contact</a>
+            </nav>
      
-        <tr>  
-            <td rowspan="2"><img src="C:\Users\andre\NorCal-Time-Trials-Website\assets\images\LOGO.png" alt="Wheel Logo" width="150" height="150"></td>
-            <th><h1>NorCal Time Trials Series</h1></th>
+            <img src="C:\Users\andre\NorCal-Time-Trials-Website\assets\images\Image 1.png" alt="Audi:
+            United Autosports, CC BY-SA 2.0 <https://creativecommons.org/licenses/by-sa/2.0>, via Wikimedia Commons"" width="150" height="150">
+
+        <h2>Upcoming Events</h2>
+        
+
+        
+            <p>February 12</p>
+            <p>&nbsp;Board Meeting</p>
+        
+
+                    <p>February 25</p>
+                    <p>&nbsp;Drivers Zoom Meeting</p>
+             
           
-        </tr>
-   
-        <tr>    
-            <td>Home | About | Contact</td>
-       
-        </tr>
+                    <p>March 12</p>
+                    <p>&nbsp;First event at Thunderhill!</p>
         
-       
-    </table>
-    <table>
-        <tr>
-            <td rowspan="10"><img src="C:\Users\andre\NorCal-Time-Trials-Website\assets\images\Image 1.png" alt="Audi:
-                United Autosports, CC BY-SA 2.0 <https://creativecommons.org/licenses/by-sa/2.0>, via Wikimedia Commons" width="150" height="150"></td>
-            <td><h2>Upcoming Events</h2></td>
-        </tr>
-
-        <tr>
-            <td>February 12</td>
-            <td>&nbsp;Board Meeting</td>
-        </tr>
-                
-                <tr>
-                    <td>February 25</td>
-                    <td>&nbsp;Drivers Zoom Meeting</td>
-                </tr>
-        
-                
-                <tr>
-                    <td>March 12</td>
-                    <td>&nbsp;First event at Thunderhill!</td>
-                </tr>
-
-
-        
-
-
-    </table>
-
-
-
-
-
 
  
 </body>
