--- a/views/index.html
+++ b/views/index.html
@@ -5,34 +5,31 @@
 <title>Home NorCal Times Series</title>
 </head>
 <body>
-    <table>
+    <img src="C:\Users\andre\NorCal-Time-Trials-Website\assets\images\LOGO.png" alt="Wheel Logo" width="150" height="150">
+    <h1>NorCal Time Trial Series</h1>
+
+        <nav>
+            <a href="#">Home</a> |
+            <a href="">About</a> |
+            <a href="">Contact</a>
+            </nav>
      
-        <tr>  
-            <td rowspan="2"><img src="C:\Users\andre\NorCal-Time-Trials-Website\assets\images\LOGO.png" alt="Wheel Logo" width="150" height="150"></td>
-            <th><h1>NorCal Time Trials Series</h1></th>
-          
-        </tr>
-   
-        <tr>    
-            <td>Home | About | Contact</td>
-       
-        </tr>
         
-       
-    </table>
-    
-
-                    <h2>&nbsp;Mission</h2> 
+            <img src="C:\Users\andre\NorCal-Time-Trials-Website\assets\images\Image 2.png" alt="Vintage Race Car:
+            Alf van Beem, CC0, via Wikimedia Commons" width="150" height="150"></td>
+      
+            <h2>&nbsp;Mission</h2>        
+        
                     <p>&nbsp;To quote https://24hoursoflemons.com/:</br>
-                        &nbsp;“Racing shouldn’t just be for rich idiots. Racing should be for all idiots.”
-                        </p>
-            
-                    <h2>&nbsp;Vision</h2> 
-                    <p>&nbsp;The NorCal Time Trial Series aspires to make the excitement of competitive</br>
-                        &nbsp;racing events on iconic Northern California racetracks available to all</br> 
-                        &nbsp;enthusiasts without the costs or risks of wheel-to-wheel racing.
-
-                        </p>
+                        &nbsp;“Racing shouldn’t just be for rich idiots. Racing should be for all idiots.”</p>
+               
+                    <h2>&nbsp;Vision</h2>          
+                
+                            <p>&nbsp;The NorCal Time Trial Series aspires to make the excitement of competitive</br>
+                                &nbsp;racing events on iconic Northern California racetracks available to all</br> 
+                                &nbsp;enthusiasts without the costs or risks of wheel-to-wheel racing.</p>
+                      
+                            
             
                     <h2>&nbsp;General Information</h2>
                     <p>&nbsp;The NorCal Time Trial Series will hold at least one event per month on a </br>
