Pics link, alt text + title

--- a/views/contact.html
+++ b/views/contact.html
@@ -2,28 +2,36 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Home NorCal Times Series</title>
+<title>Contact Us @NorCal Times Series</title>
 </head>
 <body>
-    <h1>Contact us @NorCal</h1>
-    <table>
-        <tr>
-                <th>Home |</th>
-                <th>About |</th>
-                <th>Company</th>           
-          </tr>
-    </table>
-    
+    <img src="C:\Users\andre\NorCal-Time-Trials-Website\assets\images\LOGO.png" alt="Wheel Logo" width="150" height="150">
+    <h1>NorCal Time Trial Series</h1>
 
-                     <p>&nbsp;Please email us at: info@nctts.org </p>
-                     <p>&nbsp;We will reply as quickly as we can.</p>
-
-            
-                    
-            
-                   
+        <nav>
+            <a href="#">Home</a> |
+            <a href="">About</a> |
+            <a href="">Contact</a>
+            </nav>
+     
+        
+            <img src="C:\Users\andre\NorCal-Time-Trials-Website\assets\images\Image 3.png" alt="Checkered Flag:
+            This file is licensed under the Creative Commons Attribution-Share Alike 2.5 Generic license." width="150" height="150"></td>
+      
+         
+                    <p>Please email us at: info@nctts.org 
+                    </p>
+               
+                      
+                
+                            <p>We will reply as quickly as we can.
+                            </p>
+                      
+                            
+             
             
 
  
 </body>
 </html>
+
