Added links to all pages

--- a/views/basic.html
+++ b/views/basic.html
@@ -10,8 +10,8 @@
 
         <nav>
             <a href="#">Home</a> |
-            <a href="">About</a> |
-            <a href="">Contact</a>
+            <a href="index.html">About</a> |
+            <a href="contact.html">Contact</a>
             </nav>
      
             <img src="C:\Users\andre\NorCal-Time-Trials-Website\assets\images\Image 1.png" alt="Audi:
