--- a/views/index.html
+++ b/views/index.html
@@ -9,9 +9,9 @@
     <h1>NorCal Time Trial Series</h1>
 
         <nav>
-            <a href="#">Home</a> |
-            <a href="">About</a> |
-            <a href="">Contact</a>
+            <a href="basic.html">Home</a> |
+            <a href="#">About</a> |
+            <a href="contact.html">Contact</a>
             </nav>
      
         
