Fix few unmatching tags

--- a/views/basic.html
+++ b/views/basic.html
@@ -15,7 +15,7 @@
             </nav>
      
             <img src="C:\Users\andre\NorCal-Time-Trials-Website\assets\images\Image 1.png" alt="Audi:
-            United Autosports, CC BY-SA 2.0 <https://creativecommons.org/licenses/by-sa/2.0>, via Wikimedia Commons"" width="150" height="150">
+            United Autosports, CC BY-SA 2.0 <https://creativecommons.org/licenses/by-sa/2.0>, via Wikimedia Commons" width="150" height="150">
 
         <h2>Upcoming Events</h2>
             <p>February 12</p>
