--- a/views/contact.html
+++ b/views/contact.html
@@ -16,7 +16,7 @@
      
         
             <img src="C:\Users\andre\NorCal-Time-Trials-Website\assets\images\Image 3.png" alt="Checkered Flag:
-            This file is licensed under the Creative Commons Attribution-Share Alike 2.5 Generic license." width="150" height="150"></td>
+            This file is licensed under the Creative Commons Attribution-Share Alike 2.5 Generic license." width="150" height="150"> 
       
          
                     <p>Please email us at: info@nctts.org 
