write links in a more correct way, us of <ul>

--- a/views/basic.html
+++ b/views/basic.html
@@ -5,16 +5,21 @@
 <title>About the NorCal Time Trials Series</title>
 </head>
 <body>
-    <img src="C:\Users\andre\NorCal-Time-Trials-Website\assets\images\LOGO.png" alt="Wheel Logo" width="150" height="150">
+    <img src="../assets/images/LOGO.png" alt="Wheel Logo" width="150" height="150">
     <h1>NorCal Time Trial Series</h1>
 
         <nav>
-            <a href="#">Home</a> |
-            <a href="index.html">About</a> |
-            <a href="contact.html">Contact</a>
+            <ul>
+                <li><a href="#">Home</a> |</li>
+                <li>  <a href="index.html">About</a> |</li>
+                <li> <a href="contact.html">Contact</a></li>
+            </ul>
+            
+          
+           
         </nav>
      
-            <img src="C:\Users\andre\NorCal-Time-Trials-Website\assets\images\Image 1.png" alt="Audi:
+            <img src="../assets/images/Image1.png" alt="Audi:
             United Autosports, CC BY-SA 2.0 <https://creativecommons.org/licenses/by-sa/2.0>, via Wikimedia Commons" width="150" height="150">
 
         <h2>Upcoming Events</h2>
