--- a/views/index.html
+++ b/views/index.html
@@ -5,17 +5,19 @@
 <title>Home NorCal Times Series</title>
 </head>
 <body>
-    <img src="C:\Users\andre\NorCal-Time-Trials-Website\assets\images\LOGO.png" alt="Wheel Logo" width="150" height="150">
+    <img src="../assets/images/LOGO.png" alt="Wheel Logo" width="150" height="150">
     <h1>NorCal Time Trial Series</h1>
 
         <nav>
-            <a href="basic.html">Home</a> |
-            <a href="#">About</a> |
-            <a href="contact.html">Contact</a>
+            <ul>
+                <li><a href="basic.html">Home</a> |</li>
+                <li><a href="#">About</a> |</li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
             </nav>
      
         
-            <img src="C:\Users\andre\NorCal-Time-Trials-Website\assets\images\Image 2.png" alt="Vintage Race Car:
+            <img src="../assets/images/Image2.png" alt="Vintage Race Car:
             Alf van Beem, CC0, via Wikimedia Commons" width="150" height="150">
       
             <h2>&nbsp;Mission</h2>        
