--- a/views/contact.html
+++ b/views/contact.html
@@ -9,13 +9,15 @@
     <h1>NorCal Time Trial Series</h1>
 
         <nav>
-            <a href="basic.html">Home</a> |
-            <a href="index.html">About</a> |
-            <a href="#">Contact</a>
+            <ul>
+                <li><a href="basic.html">Home</a> |</li>
+                <li>  <a href="index.html">About</a> |</li>
+                <li> <a href="#">Contact</a></li>
+            </ul>
             </nav>
      
         
-            <img src="C:\Users\andre\NorCal-Time-Trials-Website\assets\images\Image 3.png" alt="Checkered Flag:
+            <img src="../assets/images/Image3.png" alt="Checkered Flag:
             This file is licensed under the Creative Commons Attribution-Share Alike 2.5 Generic license." width="150" height="150"> 
             <p>Please email us at: info@nctts.org</p>
                
@@ -23,10 +25,6 @@
                 
             <p>We will reply as quickly as we can.</p>
                       
-                            
-             
-            
-
  
 </body>
 </html>
