--- a/views/basic.html
+++ b/views/basic.html
@@ -3,9 +3,11 @@
 <head>
 <meta charset="utf-8">
 <title>About the NorCal Time Trials Series</title>
+<link rel="stylesheet" href="../assets/styles/nctss_1.css">
+
 </head>
 <body>
-    <img src="../assets/images/LOGO.png" alt="Wheel Logo" width="150" height="150">
+    <div id="background-image"></div>
     <h1>NorCal Time Trial Series</h1>
 
         <nav>
@@ -14,8 +16,6 @@
                 <li>  <a href="index.html">About</a> |</li>
                 <li> <a href="contact.html">Contact</a></li>
             </ul>
-            
-          
            
         </nav>
      
