background img + h1 inside background

--- a/views/basic.html
+++ b/views/basic.html
@@ -7,8 +7,10 @@
 
 </head>
 <body>
-    <div id="background-image"></div>
+
+    <div id="background-img"></div>
     <h1>NorCal Time Trial Series</h1>
+
 
         <nav>
             <ul>
@@ -19,8 +21,6 @@
            
         </nav>
      
-            <img src="../assets/images/Image1.png" alt="Audi:
-            United Autosports, CC BY-SA 2.0 <https://creativecommons.org/licenses/by-sa/2.0>, via Wikimedia Commons" width="150" height="150">
 
         <h2>Upcoming Events</h2>
             <p>February 12</p>
