--- a/views/contact.html
+++ b/views/contact.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
+<link rel="stylesheet" href="../assets/styles/nctss_1.css">
 <title>Contact Us @NorCal Times Series</title>
 </head>
 <body>
-    <img src="C:\Users\andre\NorCal-Time-Trials-Website\assets\images\LOGO.png" alt="Wheel Logo" width="150" height="150">
+    <div id="background-img"></div>
     <h1>NorCal Time Trial Series</h1>
 
         <nav>
