writing below backgrounf img

--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,7 @@
 <body>
     <div id="background-img"></div>
     <h1>NorCal Time Trial Series</h1>
+    <h2>About NCTTS</h2>
 
         <nav>
             <ul>
