logo in the right position

--- a/views/contact.html
+++ b/views/contact.html
@@ -9,6 +9,8 @@
     <div id="background-img"></div>
     <h1>NorCal Time Trial Series</h1>
     <h2>Contact</h2>
+    <img src="../assets/images/LOGO.png">
+
 
         <nav>
             <ul>
@@ -17,10 +19,6 @@
                 <li> <a href="#">Contact</a></li>
             </ul>
             </nav>
-     
-        
-            <img src="../assets/images/Image3.png" alt="Checkered Flag:
-            This file is licensed under the Creative Commons Attribution-Share Alike 2.5 Generic license." width="150" height="150"> 
             <p>Please email us at: info@nctts.org</p>
                
                       
