--- a/views/basic.html
+++ b/views/basic.html
@@ -11,7 +11,7 @@
     <div id="background-img"></div>
     <h1>NorCal Time Trial Series</h1>
     <h2>Upcoming Events</h2>
-
+    <img src="../assets/images/LOGO.png">
         <nav>
             <ul>
                 <li><a href="#">Home</a> |</li>
