--- a/views/index.html
+++ b/views/index.html
@@ -9,6 +9,8 @@
     <div id="background-img"></div>
     <h1>NorCal Time Trial Series</h1>
     <h2>About NCTTS</h2>
+    <img src="../assets/images/LOGO.png">
+
 
         <nav>
             <ul>
@@ -18,9 +20,6 @@
             </ul>
             </nav>
      
-        
-            <img src="../assets/images/Image2.png" alt="Vintage Race Car:
-            Alf van Beem, CC0, via Wikimedia Commons" width="150" height="150">
       
             <h2>&nbsp;Mission</h2>        
                 <p>&nbsp;To quote https://24hoursoflemons.com/:<br>
