--- a/assets/styles/nctss_1.css
+++ b/assets/styles/nctss_1.css
@@ -29,3 +29,9 @@
     margin-top: 0%;
     color: aliceblue;
   }
+
+  ul {
+    list-style-type: none; /* Remove bullets */
+    padding: 0; /* Remove padding */
+    margin: 0; /* Remove margins */
+  }
