--- a/views/basic.html
+++ b/views/basic.html
@@ -14,8 +14,8 @@
     <img src="../assets/images/LOGO.png">
         <nav>
             <ul>
-                <li><a href="#">Home</a> |</li>
-                <li>  <a href="index.html">About</a> |</li>
+                <li><a href="#">Home</a> </li>
+                <li>  <a href="index.html">About</a> </li>
                 <li> <a href="contact.html">Contact</a></li>
             </ul>
            
