--- a/views/contact.html
+++ b/views/contact.html
@@ -14,8 +14,8 @@
 
         <nav>
             <ul>
-                <li><a href="basic.html">Home</a> |</li>
-                <li>  <a href="index.html">About</a> |</li>
+                <li><a href="basic.html">Home</a> </li>
+                <li>  <a href="index.html">About</a> </li>
                 <li> <a href="#">Contact</a></li>
             </ul>
             </nav>
