--- a/views/index.html
+++ b/views/index.html
@@ -14,25 +14,25 @@
 
         <nav>
             <ul>
-                <li><a href="basic.html">Home</a> |</li>
-                <li><a href="#">About</a> |</li>
+                <li><a href="basic.html">Home</a> </li>
+                <li><a href="#">About</a> </li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
             </nav>
      
       
-            <h2>&nbsp;Mission</h2>        
+            <p>&nbsp;Mission</p>        
                 <p>&nbsp;To quote https://24hoursoflemons.com/:<br>
                 &nbsp;“Racing shouldn’t just be for rich idiots. Racing should be for all idiots.”</p>
                
-            <h2>&nbsp;Vision</h2>          
+            <p>&nbsp;Vision</p>          
                 <p>&nbsp;The NorCal Time Trial Series aspires to make the excitement of competitive<br>
                 &nbsp;racing events on iconic Northern California racetracks available to all<br> 
                 &nbsp;enthusiasts without the costs or risks of wheel-to-wheel racing.</p>
                       
                             
             
-            <h2>&nbsp;General Information</h2>
+            <p>&nbsp;General Information</p>
                 <p>&nbsp;The NorCal Time Trial Series will hold at least one event per month on a <br>
                 &nbsp;track such as Sonoma Raceway, Thunderhill Raceway, or WeatherTech <br>
                 &nbsp;Raceway at Laguna Seca. Full safety equipment is required, and your car <br>
