New background img, styling paragraphs

--- a/views/basic.html
+++ b/views/basic.html
@@ -12,17 +12,20 @@
     <h1>NorCal Time Trial Series</h1>
     <h2>Upcoming Events</h2>
     <img src="../assets/images/LOGO.png">
-        <nav>
-            <ul>
-                <li><a href="#">Home</a> </li>
-                <li>  <a href="index.html">About</a> </li>
-                <li> <a href="contact.html">Contact</a></li>
-            </ul>
-           
-        </nav>
-     
 
-        
+    <div class="row">
+        <div class="column">
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a> </li>
+                    <li>  <a href="index.html">About</a> </li>
+                    <li> <a href="contact.html">Contact</a></li>
+                </ul>
+               
+            </nav>
+        </div>
+       
+        <div class="column">
             <p>February 12</p>
             <p>&nbsp;Board Meeting</p>
         
@@ -32,6 +35,14 @@
           
             <p>March 12</p>
             <p>&nbsp;First event at Thunderhill!</p>
+        </div>
+
+     
+
+
+
+    </div>
+       
         
 
  
