--- a/views/contact.html
+++ b/views/contact.html
@@ -11,7 +11,8 @@
     <h2>Contact</h2>
     <img src="../assets/images/LOGO.png">
 
-
+<div class="row">
+    <div class="column">
         <nav>
             <ul>
                 <li><a href="basic.html">Home</a> </li>
@@ -19,11 +20,17 @@
                 <li> <a href="#">Contact</a></li>
             </ul>
             </nav>
+    </div>
+
+        <div class="column">
             <p>Please email us at: info@nctts.org</p>
-               
-                      
-                
+            
             <p>We will reply as quickly as we can.</p>
+        </div>
+
+
+</div>
+
                       
  
 </body>
