--- a/views/index.html
+++ b/views/index.html
@@ -11,33 +11,46 @@
     <h2>About NCTTS</h2>
     <img src="../assets/images/LOGO.png">
 
+    <div class="row">
+        <div class="column">
+            <nav>
+                <ul>
+                    <li><a href="basic.html">Home</a> </li>
+                    <li><a href="#">About</a> </li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+                </nav>
+        </div>
 
-        <nav>
-            <ul>
-                <li><a href="basic.html">Home</a> </li>
-                <li><a href="#">About</a> </li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-            </nav>
+
      
-      
-            <p>&nbsp;Mission</p>        
+            <div class="column">
+
+                <p class="title">&nbsp;Mission</p>        
                 <p>&nbsp;To quote https://24hoursoflemons.com/:<br>
                 &nbsp;“Racing shouldn’t just be for rich idiots. Racing should be for all idiots.”</p>
                
-            <p>&nbsp;Vision</p>          
+            <p class="title">&nbsp;Vision</p>          
                 <p>&nbsp;The NorCal Time Trial Series aspires to make the excitement of competitive<br>
                 &nbsp;racing events on iconic Northern California racetracks available to all<br> 
                 &nbsp;enthusiasts without the costs or risks of wheel-to-wheel racing.</p>
                       
                             
             
-            <p>&nbsp;General Information</p>
+            <p class="title">&nbsp;General Information</p>
                 <p>&nbsp;The NorCal Time Trial Series will hold at least one event per month on a <br>
                 &nbsp;track such as Sonoma Raceway, Thunderhill Raceway, or WeatherTech <br>
                 &nbsp;Raceway at Laguna Seca. Full safety equipment is required, and your car <br>
                 &nbsp;must pass technical inspection before you can compete.</p>
+
+            </div>
+
+           
             
+
+    </div>
+
+       
 </body>
 </html>
 
