--- a/views/basic.html
+++ b/views/basic.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="utf-8">
 <title>About the NorCal Time Trials Series</title>
-<link rel="stylesheet" href="../assets/styles/nctss_1.css">
+<!-- <link rel="stylesheet" href="../assets/styles/nctss_1.css"> -->
+<link rel="stylesheet" href="../assets/styles/nctss_2.css">
 
 </head>
 <body>
@@ -17,9 +18,9 @@
         <div class="column">
             <nav>
                 <ul>
-                    <li><a href="#">Home</a> </li>
-                    <li>  <a href="index.html">About</a> </li>
-                    <li> <a href="contact.html">Contact</a></li>
+                    <li class="button" id="basic"><a  href="basic.html#basic">Home</a> </li>
+                    <li class="button" id="index"><a  href="index.html#index">About</a> </li>
+                    <li class="button" id="contact"><a  href="contact.html#contact">Contact</a></li>
                 </ul>
                
             </nav>
