--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../assets/styles/nctss_1.css">
+<!-- <link rel="stylesheet" href="../assets/styles/nctss_1.css"> -->
+<link rel="stylesheet" href="../assets/styles/nctss_2.css">
 <title>Home NorCal Times Series</title>
 </head>
 <body>
@@ -15,9 +16,9 @@
         <div class="column">
             <nav>
                 <ul>
-                    <li><a href="basic.html">Home</a> </li>
-                    <li><a href="#">About</a> </li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li class="button" id="basic"><a  href="basic.html#basic">Home</a> </li>
+                    <li class="button" id="index"><a  href="index.html#index">About</a> </li>
+                    <li class="button" id ="contact"><a  href="contact.html#contact">Contact</a></li>
                 </ul>
                 </nav>
         </div>
