--- a/assets/styles/nctss_2.css
+++ b/assets/styles/nctss_2.css
@@ -6,6 +6,16 @@ h1 {
 
   }
 
+  h2{
+    text-align: center;
+    height: 40px;
+    margin-top: 0%;
+    padding-top: 10px;
+    border: solid;
+
+  }
+
+
 #background-img {
     
     background-image: url("../images/AlternativeImage.jpg");
@@ -16,6 +26,19 @@ h1 {
 
    }
 
+   img{
+    
+    position: absolute;
+    top: 700px;
+    left: 40px;
+    height: 150px;
+    width: 150px;
+   }
+
+   a{
+    color: aliceblue;
+   }
+
    ul {
     list-style-type: none; /* Remove bullets */
     display:flex;  
@@ -23,7 +46,6 @@ h1 {
     position: absolute;
     top: 50px;
     right: 16px;
-    color: white;
    
   }
 ul li{
@@ -50,3 +72,10 @@ a:link {
   :target {
     background-color: green;
 }
+
+  .column {
+    float: left; 
+    margin-left: 250px;
+  }
+
+
