--- a/views/contact.html
+++ b/views/contact.html
@@ -3,7 +3,9 @@
 <head>
 <meta charset="utf-8">
 <!-- <link rel="stylesheet" href="../assets/styles/nctss_1.css"> -->
-<link rel="stylesheet" href="../assets/styles/nctss_2.css">
+<!--<link rel="stylesheet" href="../assets/styles/nctss_2.css">-->
+<link rel="stylesheet" href="../assets/styles/nctss_3.css">
+
 <title>Contact Us @NorCal Times Series</title>
 </head>
 <body>
