--- a/assets/styles/nctss_3.css
+++ b/assets/styles/nctss_3.css
@@ -60,3 +60,25 @@ margin-left: auto;
 a:link {
     text-decoration: none;
 }
+
+
+
+.column {
+  text-align: center;
+  }
+
+
+h2{
+    text-align: center;
+    font-size: 50px;
+    text-decoration: underline;
+}
+
+.title{
+    font-size: larger;
+    font-weight: bold;
+  }
+
+p{
+    font-size: large;
+}
