--- a/assets/styles/nctss_3.css
+++ b/assets/styles/nctss_3.css
@@ -13,7 +13,7 @@
     margin-left: 100px;
     font-size: 50px;
     position: absolute;
-
+ 
   }
 
   img{
@@ -81,4 +81,8 @@ h2{
 
 p{
     font-size: large;
+}
+
+.italic{
+  font-style: italic;
 }
