--- a/views/general_info.html
+++ b/views/general_info.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
+<title>General Information</title>
 <!-- <link rel="stylesheet" href="../assets/styles/nctss_1.css"> -->
 <!--<link rel="stylesheet" href="../assets/styles/nctss_2.css">-->
 <link rel="stylesheet" href="../assets/styles/nctss_3.css">
 
-<title>Home NorCal Times Series</title>
 </head>
+
 <body>
+
     <div id="background-img"></div>
     <h1>NorCal Time Trial Series</h1>
     <h2>General Information</h2>
@@ -20,78 +22,73 @@
                 <ul>
                     <li class="button" id="basic"><a  href="basic.html#basic">Home</a> </li>
                     <li class="button" id="index"><a  href="index.html#index">About</a> </li>
-                    <li class="button" id ="contact"><a  href="contact.html#contact">Contact</a></li>
+                    <li class="button" id="contact"><a  href="contact.html#contact">Contact</a></li>
+                    <li class="button" id="general_info"><a  href="general_info.html#general_info">Info</a></li>
+
                 </ul>
-                </nav>
+               
+            </nav>
+        </div>
+       
+        <div class="column">
+            <p class="italic">All events take place on Saturday</p>
+            <p class="title">Locations:</p>  
+        <p>Sonoma Raceway (formerly called Sears Point)<br>
+            29355 Arnold Dr, Sonoma, CA
+            </p>           
+            <p>Thunderhill Raceway Park<br>
+            5250 CA-162, Willows, CA
+            </p>
+            <p>WeatherTech Raceway Laguna Seca<br>
+                1021 Monterey Salinas Hwy, Salinas, CA
+        </p>
+        <p class="title">Spring Schedule:</p>
+
+        <p>March 12 – Thunderhill</p>
+        <p>April 9 – Sonoma</p>
+        <p>May 14 – Laguna Seca</p>
+        <p>May 28 – Laguna Seca</p>
+        <p>June 11 – awards banquet (location TBD)</p>
+
+        <p class="title">Times:</p>
+        <p>Gates open at 7:00 AM</p>
+        <p>First car out at 9:00 AM</p>
+        <p>Gates close at 5:00 PM</p>
+
+        <p class="title"> Additional Information:</p>        
+        <p>If deemed necessary by NCTTS, events may be shortened or <br>cancelled due to extreme weather conditions.</p>
+
+        <p class="title">Please direct all questions to:</p>
+        <p>Michael Randall, Event Coordinator</p>
+        <p class="title">Phone:</p>
+        <p>(415) 690-8132 </p>
+        <p class="title">Email:</p>
+        <p>michael.randall@nctts.org</p>
+
+
+        
+
+
+
+
+
+        
+        
+        
+        
+        
+
+
         </div>
 
-
      
-            <div class="column">
-
-                <p class="title">&nbsp;<!DOCTYPE html>
-                    <html lang="en">
-                    <head>
-                    <meta charset="utf-8">
-                    <!-- <link rel="stylesheet" href="../assets/styles/nctss_1.css"> -->
-                    <!--<link rel="stylesheet" href="../assets/styles/nctss_2.css">-->
-                    <link rel="stylesheet" href="../assets/styles/nctss_3.css">
-                    
-                    <title>Home NorCal Times Series</title>
-                    </head>
-                    <body>
-                        <div id="background-img"></div>
-                        <h1>NorCal Time Trial Series</h1>
-                        <h2>About NCTTS</h2>
-                        <img src="../assets/images/LOGO.png">
-                    
-                        <div class="row">
-                            <div class="column">
-                                <nav>
-                                    <ul>
-                                        <li class="button" id="basic"><a  href="basic.html#basic">Home</a> </li>
-                                        <li class="button" id="index"><a  href="index.html#index">About</a> </li>
-                                        <li class="button" id ="contact"><a  href="contact.html#contact">Contact</a></li>
-                                    </ul>
-                                    </nav>
-                            </div>
-                    
-                    
-                         
-                                <div class="column">
-                    
-                                    <p class="title">&nbsp;Locations</p>        
-                                    <p>&nbsp;Sonoma Raceway (formerly called Sears Point)    
-                                    <br>
-                                    &nbsp;29355 Arnold Dr, Sonoma, CA</p>
-                                    <p>nbsp;</p>
-                                    <p></p>
-                                    <p>nbsp;</p>
-                                    <p></p>
-                                </div>
-                    
-                               
-                                
-                    
-                        </div>
-                    
-                           
-                    </body>
-                    </html>
-                    
-                    </p>        
-
-               
 
 
-            </div>
-
-           
-            
 
     </div>
-
        
+        
+
+ 
 </body>
 </html>
-
