--- a/views/safety.html
+++ b/views/safety.html
@@ -2,9 +2,33 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>About the NorCal Time Trials Series</title>
+<title>Safety Rules</title>
 <!-- <link rel="stylesheet" href="../assets/styles/nctss_1.css"> -->
 <!--<link rel="stylesheet" href="../assets/styles/nctss_2.css">-->
 <link rel="stylesheet" href="../assets/styles/nctss_3.css">
 
 </head>
+
+<body>
+
+    <div id="background-img"></div>
+    <h1>NorCal Time Trial Series</h1>
+    <h2>Time Trials Safety Rules</h2>
+    <img src="../assets/images/LOGO.png">
+
+    <div class="row">
+        <div class="column">
+            <nav>
+                <ul>
+                    <li class="button" id="basic"><a  href="basic.html#basic">Home</a> </li>
+                    <li class="button" id="index"><a  href="index.html#index">About</a> </li>
+                    <li class="button" id="contact"><a  href="contact.html#contact">Contact</a></li>
+                    <li class="button" id="general_info"><a  href="general_info.html#general_info">Info</a></li>
+                    <li class="button" id="safety"><a  href="safety.html#safety">Safety</a></li>
+
+
+                </ul>
+               
+            </nav>
+        </div>
+</body>
