header with all 5 buttons

--- a/views/contact.html
+++ b/views/contact.html
@@ -20,8 +20,9 @@
             <ul>
                 <li class="button" id="basic"><a  href="basic.html#basic">Home</a> </li>
                 <li class="button" id="index"><a  href="index.html#index">About</a> </li>
-                <li class="button" id ="contact"><a  href="contact.html#contact">Contact</a></li>
-            </ul>
+                <li class="button" id="contact"><a  href="contact.html#contact">Contact</a></li>
+                <li class="button" id="general_info"><a  href="general_info.html#general_info">Info</a></li>
+                <li class="button" id="safety"><a  href="safety.html#safety">Safety</a></li>
             </nav>
     </div>
 
