--- a/views/general_info.html
+++ b/views/general_info.html
@@ -24,7 +24,7 @@
                     <li class="button" id="index"><a  href="index.html#index">About</a> </li>
                     <li class="button" id="contact"><a  href="contact.html#contact">Contact</a></li>
                     <li class="button" id="general_info"><a  href="general_info.html#general_info">Info</a></li>
-
+                    <li class="button" id="safety"><a  href="safety.html#safety">Safety</a></li>
                 </ul>
                
             </nav>
