--- a/views/safety.html
+++ b/views/safety.html
@@ -28,7 +28,76 @@
 
 
                 </ul>
+
                
             </nav>
+            <div class="column">
+
+            <p class="italic">We have adopted the rules of the Sports Car Club of America</p>
+
+     <p>
+        Motorsports are inherently dangerous. These Rules are in no way a guarantee against injury or <br>
+        death to participants, spectators or others. You can reduce risk by driving well, properly using <br>
+        superior safety gear, paying attention, and reporting unsatisfactory issues to the event officials.<br>
+         Drivers are responsible for ensuring that the vehicle being used is properly prepared for <br>
+         operation under elevated acceleration, braking and cornering forces. Drivers must have a <br>
+         Technical Inspection (Tech) Sheet completed and available to present to an SCCA Official.
+    </p>
+
+ <p>
+    Entrants are reminded that there is a considerable gap between a minimum standard and the <br>
+    best protection that current technology can provide. It is recommended that seats, restraint <br>
+    systems, roll bars and helmets meet the highest safety standards possible.
+ </p>
+
+ <p>
+    National Time Trials Events and some SCCA Regions require more than the minimum safety <br>
+    required by these Rules. In these cases, there are two additional Safety Levels. 
+ </p>
+
+<p class="bold">SAFETY LEVEL 1</p> 
+<p class="bold">1. All Vehicles</p>
+
+<ol type="1">
+    <li class="bold">Seats and Setabelt</li>
+    <ol type="A">
+        <li>All vehicles must provide factory original (or better) seats that are securely mounted.
+        </li>
+        <li> All vehicles must have seat belts with a minimum of three (3) mounting points mounted in accordance with manufacturers’ recommendations when applicable (SFI or FIA rated are recommended).</li>
+        <li>When in-car coaches are utilized, any seat and restraints used by the coach shall match or exceed those used by the driver.</li>
+      </ol>
+
+    <li class="bold">Interior</li>
+    <ol type="A">
+        <li>The interior and trunk must be emptied and clear of all loose items, including floor mats which are not secured with clips or fasteners.</li>
+    </ol>
+
+    <li class="bold">Brakes</li>
+    <ol type="A">
+        <li> Brake pads or shoes should not be more than 50% worn at the start of an event and should not ever be more than 85% worn during competition.
+        </li>
+        <li> Brake fluid must be clean and full (DOT 4 recommended).
+        </li>
+        <li>Vehicles must have at least one working brake light.
+        </li>
+        <li>There must be no brake fluid leaks.
+        </li>
+        <li>Rotors and drums must be in good condition without cracks or discoloration.
+        </li>
+      </ol>
+  </ol>
+
+ 
+
+   
+
+    
+
+</div>
+
+
+
+
+
         </div>
 </body>
