--- a/views/registration.html
+++ b/views/registration.html
@@ -8,3 +8,32 @@
 <link rel="stylesheet" href="../assets/styles/registration.css">
 
 </head>
+ <form>
+
+    <div class="identity">
+        <label for="fname">First Name</label>
+        <input type="text" id="fname" name="fname">
+        <label for="lname">Last Name</label>
+        <input type="text" id="lname" name="lname">
+    
+    </div>
+
+    <div class="info">
+        <label for="address">Street Address</label>
+        <input type="text" id="address" name="address">
+
+    </div>
+    <div class="info">
+
+    <label for="zcode">Zip Code</label>
+    <input type="text" id="zcode" name="zcode">
+    </div>
+
+    <div class="info">
+
+        <label for="age">Age</label>
+        <input type="text" id="age" name="age">
+        </div>
+
+
+ </form>
