--- a/views/registration.html
+++ b/views/registration.html
@@ -35,5 +35,14 @@
         <input type="text" id="age" name="age">
         </div>
 
+        <div class="gender"> 
+            <label for="male">Male</label>
+            <input type="checkbox" id="male" name="male" >
+            <label for="female">Female</label>
+            <input type="checkbox" id="female" name="female" checked>
+            
+        
+        </div>
+
 
  </form>
