--- a/views/registration.html
+++ b/views/registration.html
@@ -8,6 +8,8 @@
 <link rel="stylesheet" href="../assets/styles/registration.css">
 
 </head>
+<body>
+    <h1>Registration Form</h1>
  <form>
 
     <div class="identity">
@@ -39,10 +41,115 @@
             <label for="male">Male</label>
             <input type="checkbox" id="male" name="male" >
             <label for="female">Female</label>
-            <input type="checkbox" id="female" name="female" checked>
+            <input type="checkbox" id="female" name="female">
             
         
         </div>
 
+        <div class="info">
+
+            <label for="phone">Contact Phone</label>
+            <input type="text" id="phone" name="phone">
+            </div>
+        
+            <div class="info">
+        
+                <label for="email">Contact Email</label>
+                <input type="text" id="email" name="email">
+                </div>
+                     <h3>Motorsports Organization Membership? </h3>
+ 
+                    <div class="checkboxes">
+                        <input type="checkbox" id="SCCA" name="SCCA" >
+                        <label for="SCCA">Sports Car Club of America (SCCA)</label>
+                   </div>
+                   <div class="checkboxes">
+
+
+                         <input type="checkbox" id="NASA" name="NASA">
+                        <label for="NASA">National Autosport Association (NASA)</label>
+                   
+                        
+                    </div>
+                    <div class="checkboxes">
+
+                     
+                        <input type="checkbox" id="none" name="none">
+                        <label for="none">None</label>
+                    </div>
+ 
+                     <h3>Previous Competitive Experience </h3>
+ 
+                    <div class="checkboxes">
+                        <input type="checkbox" id="none2" name="none2" >
+                        <label for="none2">None</label>
+                    </div>
+
+                    <div class="checkboxes">
+                        <input type="checkbox" id="HPDE" name="HPDE">
+                        <label for="HPDE">HPDE/Track Days</label>
+                    </div>
+                    <div class="checkbox">
+                        <input type="checkbox" id="Autocross" name="Autocross">
+                        <label for="Autocross">Autocross</label>
+                    </div>
+                    <div class="checkbox">
+                        <input type="checkbox" id="one_year" name="one_year">
+                        <label for="one_year">One Year</label>
+                    </div>
+                    <div class="checkbox">
+                        <input type="checkbox" id="2_years" name="2_years">
+                        <label for="2_years">Two Years</label>
+                    </div>
+                    <div class="checkbox">
+                        <input type="checkbox" id="over_2" name="over_2">
+                        <label for="over_2">Over Two Years</label>
+                    </div>
+                </div>
+              
+                         <input type="checkbox" id="none" name="none">
+                        <label for="none">None</label>
+                    </div>
+                </div>
+                <h3>Racing License </h3>
+                <div class="checkboxes">
+
+                 
+                    <input type="checkbox" id="none" name="none">
+                    <label for="none">None</label>
+                </div>
+ 
+                <div class="checkboxes">
+                    <input type="checkbox" id="SCCA" name="SCCA" >
+                    <label for="SCCA">SCCA</label>
+               </div>
+               <div class="checkboxes">
+                     <input type="checkbox" id="NASA" name="NASA">
+                    <label for="NASA">NASA</label>
+                </div>
+                <div class="checkboxes">
+                    <input type="checkbox" id="FIA" name="FIA">
+                   <label for="FIA">FIA</label>
+               </div>
+               
+
+               <p>
+                I agree that I will abide by all the rules of the NorCal Time Trial Series (NCTTS).  
+                I recognize that Motorsports are inherently dangerous. <br>
+                I hereby release, discharge, and/or otherwise indemnify NCTTS, their employees and associated personnel and volunteers, including the facilities used for events, against any claim by or on behalf of the registrant as a result of my participation in the series. 
+               </p>
+               <div class="checkboxes">
+                <input type="checkbox" id="sign" name="sign">
+               <label for="sign">By thicking this box, I hereby agree and authorize the above. 
+            </label>
+           </div>
+
+        <div class="submit-form">
+            <button type="submit">Send your message</button>
+
+        </div>
+
+
 
  </form>
+</body>
