Eliminating stray tags and duplicate ids

--- a/views/registration.html
+++ b/views/registration.html
@@ -105,27 +105,27 @@
                         <input type="checkbox" id="over_2" name="over_2">
                         <label for="over_2">Over Two Years</label>
                     </div>
-                </div>
-              
-                         <input type="checkbox" id="none" name="none">
-                        <label for="none">None</label>
-                    </div>
-                </div>
+           
+                    <div class="checkbox">
+
+                         <input type="checkbox" id="none3" name="none3">
+                        <label for="none3">None</label>
+                 </div>
                 <h3>Racing License </h3>
                 <div class="checkboxes">
 
                  
-                    <input type="checkbox" id="none" name="none">
-                    <label for="none">None</label>
+                    <input type="checkbox" id="none4" name="none4">
+                    <label for="none4">None</label>
                 </div>
  
                 <div class="checkboxes">
-                    <input type="checkbox" id="SCCA" name="SCCA" >
-                    <label for="SCCA">SCCA</label>
+                    <input type="checkbox" id="SCCA2" name="SCCA2" >
+                    <label for="SCCA2">SCCA</label>
                </div>
                <div class="checkboxes">
-                     <input type="checkbox" id="NASA" name="NASA">
-                    <label for="NASA">NASA</label>
+                     <input type="checkbox" id="NASA2" name="NASA2">
+                    <label for="NASA2">NASA</label>
                 </div>
                 <div class="checkboxes">
                     <input type="checkbox" id="FIA" name="FIA">
