Changing few details to use more flex

--- a/views/registration.html
+++ b/views/registration.html
@@ -9,9 +9,10 @@
 
 </head>
 <body>
-    <h1>Registration Form</h1>
+   
+    <h1 class="title">Registration Form</h1>
  <form>
-
+<div class="first_block">
     <div class="identity">
         <label for="fname">First Name</label>
         <input type="text" id="fname" name="fname">
@@ -36,15 +37,18 @@
         <label for="age">Age</label>
         <input type="text" id="age" name="age">
         </div>
+         
+        <div class="checkboxes">
+            
 
-        <div class="gender"> 
             <label for="male">Male</label>
             <input type="checkbox" id="male" name="male" >
             <label for="female">Female</label>
             <input type="checkbox" id="female" name="female">
-            
+ 
+
         
-        </div>
+     </div>
 
         <div class="info">
 
@@ -57,82 +61,70 @@
                 <label for="email">Contact Email</label>
                 <input type="text" id="email" name="email">
                 </div>
+            </div>
                      <h3>Motorsports Organization Membership? </h3>
- 
-                    <div class="checkboxes">
+                    
+                    <div class="checkboxes"> 
                         <input type="checkbox" id="SCCA" name="SCCA" >
                         <label for="SCCA">Sports Car Club of America (SCCA)</label>
-                   </div>
-                   <div class="checkboxes">
-
-
-                         <input type="checkbox" id="NASA" name="NASA">
-                        <label for="NASA">National Autosport Association (NASA)</label>
-                   
-                        
                     </div>
+           
                     <div class="checkboxes">
-
-                     
+                        <input type="checkbox" id="NASA" name="NASA">
+                        <label for="NASA">National Autosport Association (NASA)</label>
+                    </div>
+                    
+                    <div class="checkboxes">
                         <input type="checkbox" id="none" name="none">
                         <label for="none">None</label>
                     </div>
- 
+                    
+   
                      <h3>Previous Competitive Experience </h3>
- 
-                    <div class="checkboxes">
-                        <input type="checkbox" id="none2" name="none2" >
+                     <div class="checkboxes">
+
+                         <input type="checkbox" id="none2" name="none2" >
                         <label for="none2">None</label>
-                    </div>
+                        </div>
+                        <div class="checkboxes">
+                            <input type="checkbox" id="HPDE" name="HPDE">
+                            <label for="HPDE">HPDE/Track Days</label>
+                        </div>
+                         <div class="checkboxes">
+                            <input type="checkbox" id="Autocross" name="Autocross">
+                            <label for="Autocross">Autocross</label>
+                         </div>
+                        <div class="checkboxes">
+                            <input type="checkbox" id="one_year" name="one_year">
+                            <label for="one_year">One Year</label>
+                        </div>
+                        <div class="checkboxes">
+                            <input type="checkbox" id="2_years" name="2_years">
+                            <label for="2_years">Two Years</label>
+                        </div>
+                        <div class="checkboxes">
 
-                    <div class="checkboxes">
-                        <input type="checkbox" id="HPDE" name="HPDE">
-                        <label for="HPDE">HPDE/Track Days</label>
-                    </div>
-                    <div class="checkbox">
-                        <input type="checkbox" id="Autocross" name="Autocross">
-                        <label for="Autocross">Autocross</label>
-                    </div>
-                    <div class="checkbox">
-                        <input type="checkbox" id="one_year" name="one_year">
-                        <label for="one_year">One Year</label>
-                    </div>
-                    <div class="checkbox">
-                        <input type="checkbox" id="2_years" name="2_years">
-                        <label for="2_years">Two Years</label>
-                    </div>
-                    <div class="checkbox">
-                        <input type="checkbox" id="over_2" name="over_2">
+                         <input type="checkbox" id="over_2" name="over_2">
                         <label for="over_2">Over Two Years</label>
-                    </div>
-           
-                    <div class="checkbox">
-
-                         <input type="checkbox" id="none3" name="none3">
-                        <label for="none3">None</label>
-                 </div>
-                <h3>Racing License </h3>
-                <div class="checkboxes">
-
+                        </div>
+                        <div class="checkboxes">
+                            <input type="checkbox" id="none3" name="none3">
+                            <label for="none3">None</label>
+                        </div>
+                        
+                 <h3>Racing License </h3>
+ 
                  
                     <input type="checkbox" id="none4" name="none4">
                     <label for="none4">None</label>
-                </div>
- 
-                <div class="checkboxes">
-                    <input type="checkbox" id="SCCA2" name="SCCA2" >
+  
+                     <input type="checkbox" id="SCCA2" name="SCCA2" >
                     <label for="SCCA2">SCCA</label>
-               </div>
-               <div class="checkboxes">
-                     <input type="checkbox" id="NASA2" name="NASA2">
+                      <input type="checkbox" id="NASA2" name="NASA2">
                     <label for="NASA2">NASA</label>
-                </div>
-                <div class="checkboxes">
-                    <input type="checkbox" id="FIA" name="FIA">
+                     <input type="checkbox" id="FIA" name="FIA">
                    <label for="FIA">FIA</label>
-               </div>
-               
-
+ 
                <p>
                 I agree that I will abide by all the rules of the NorCal Time Trial Series (NCTTS).  
                 I recognize that Motorsports are inherently dangerous. <br>
